--- a/04.분류/캐글신용카드사기검출.ipynb
+++ b/04.분류/캐글신용카드사기검출.ipynb
@@ -305,10 +305,46 @@
     "    # 인자로 입력된 DataFrame의 사전 데이터 가공이 완료된 복사 DataFrame 반환\n",
     "    df_copy = get_preprocessed_df(df)\n",
     "    # DataFrame의 맨 마지막 칼럼이 레이블, 나머지 피처들\n",
-    "    X_features = df_copy.iloc[:,:-1]\n",
+    "    X_features = df_copy.iloc[:,:-1]       # X = df.iloc[:,1:-1].values\n",
     "    y_target = df_copy.iloc[:, -1]\n",
     "    # train_test_split()으로 학습과 \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_(언더바)의 의미: label이라는 값을 뒤에서 이용하지않을것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):  # i값이 사용되지않기 때문에 _ 사용\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
